<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App strings -->
    <string name="app_name">buildSense</string>

    <!-- UI strings -->
    <string name="menu_settings">Settings</string>
    <string name="main_title">buildSense</string>
    <string name="settings_title">Settings</string>
    <string name="add_loc">Add Location</string>
    <string name="change_sem">Change Semantic</string>
    <string name="localize">Localize</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loc_updated">Location Updated</string>
    <string name="meta_updated">Location Candidates Updated</string>
    <string name="note">Notes about CURRENT environment</string>
    <string name="sel_freq_note">- Select Frequent Notes -</string>
    <string name="url_error">buildSense URL Error</string>
    <string name="server_no_respond">buildSense Server Not Responding</string>

    <!-- Settings strings -->
    <string name="pref_general_category_summ">General settings</string>
    <string name="pref_general_category">General</string>
    <string name="pref_auto_report_summ">Automatically report location when possible</string>
    <string name="pref_auto_report">Automatic Report</string>
    <string name="default_auto_report">true</string>
    <string name="buildsense_pref_server_category_summ">buildSense server settings</string>
    <string name="buildsense_pref_server_category">buildSense Server</string>
    <string name="bearloc_pref_server_category_summ">Localization server settings</string>
    <string name="bearloc_pref_server_category">Localization Server</string>
    <string name="pref_sampler_category_summ">Sampler settings</string>
    <string name="pref_sampler_category">Sampler</string>

    <!-- Server address settings strings -->
    <string name="pref_server_addr_summ">buildSense server domain name or IP address</string>
    <string name="pref_server_addr">buildSense Server Address</string>
    <string name="default_server_addr">54.242.57.128</string>

    <!-- Server port settings strings -->
    <string name="pref_server_port_summ">Port of buildSense service</string>
    <string name="pref_server_port">buildSense Server Port</string>
    <string name="default_server_port">10081</string>

    <!-- Overwrite bearloc strings -->
    <string name="bearloc_default_server_addr">54.242.57.128</string>
    <string name="bearloc_default_server_port">10080</string>

</resources>