<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="edu.berkeley.buildsense.BuildSenseSettingsActivity$SettingsFragment"
        android:summary="@string/pref_general_category_summ"
        android:title="@string/pref_general_category" >
        <extra
            android:name="settings"
            android:value="general" />
    </header>
    <header
        android:fragment="edu.berkeley.buildsense.BuildSenseSettingsActivity$SettingsFragment"
        android:summary="@string/buildsense_pref_server_category_summ"
        android:title="@string/buildsense_pref_server_category" >
        <extra
            android:name="settings"
            android:value="buildsense_server" />
    </header>
    <header
        android:fragment="edu.berkeley.buildsense.BuildSenseSettingsActivity$SettingsFragment"
        android:summary="@string/bearloc_pref_server_category_summ"
        android:title="@string/bearloc_pref_server_category" >
        <extra
            android:name="settings"
            android:value="bearloc_server" />
    </header>
    <header
        android:fragment="edu.berkeley.buildsense.BuildSenseSettingsActivity$SettingsFragment"
        android:summary="@string/pref_sampler_category_summ"
        android:title="@string/pref_sampler_category" >
        <extra
            android:name="settings"
            android:value="sampler" />
    </header>

</preference-headers>